clusters/management/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    cert-manager.io/common-name: longhorn.kng.house
    external-dns.alpha.kubernetes.io/hostname: longhorn.kng.house
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.kng.house
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - longhorn.kng.house
    secretName: longhorn-tls
